# python-onapsdk

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  .pyup.yml.old  CHANGELOG.md  CODEOWNER  Dockerfile  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  doc-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upload-requirements.txt
docs/: Makefile  architecture.rst  conf.py  contents.rst  description.rst  development.rst  glossary.rst  index.rst  onapsdk.rst
docs/examples/: e2e_artifact_upload.rst  e2e_basicvm_nomulticloud_instantiation.rst  e2e_closed_loop_instantiation.rst  e2e_net_instantiation.rst  e2e_vfw_instantiation.rst  e2e_vfw_macro_instantiation.rst  examples.rst  k8s_plugin_usage.rst
docs/modules/: modules.rst  onapsdk.aai.business.rst  onapsdk.aai.cloud_infrastructure.rst  onapsdk.aai.rst  onapsdk.cds.rst  onapsdk.clamp.rst  onapsdk.configuration.rst  onapsdk.cps.rst  onapsdk.dmaap.rst  onapsdk.msb.k8s.rst  onapsdk.msb.rst  onapsdk.nbi.rst  onapsdk.rst  (+6 more)
integration_tests/: docker-compose.yml  local_urls.py  tca_clampnode.yaml  test_01_vendor.py  test_02_vsp.py  test_03_vf.py  test_04_service.py  test_05_cloud_infrastructure.py  test_06_customer.py  test_07_instantiation.py  test_08_cds.py  test_09_clamp.py  test_10_msb_k8s.py  test_11_ves.py  test_12_dmaap.py  test_vendor.py  test_vendor_integration.py  test_vf.py  test_vsp.py  test_vsp_integration.py  urls.py
scripts/: build_all_branches_in.sh
tests/: test_aai_bulk.py  test_aai_cell.py  test_aai_cloud_region.py  test_aai_complex.py  test_aai_customer.py  test_aai_element.py  test_aai_geo_region.py  test_aai_line_of_business.py  test_aai_network.py  test_aai_owning_entity.py  test_aai_platform.py  test_aai_pnf.py  test_aai_project.py  test_aai_resource.py  test_aai_service.py  test_aai_service_instance.py  test_aai_service_subscription.py  test_aai_site_resource.py  test_aai_vf_module.py  test_aai_vnf.py  test_cds.py  test_cds_blueprint_models.py  test_clamp.py  test_configuration.py  test_cps.py  test_dmaap.py  test_esr.py  test_exceptions.py  test_gui.py  test_headers_creator.py  test_jinja.py  test_msb_k8s.py  test_multicloud.py  test_nbi.py  test_onap_service.py  test_pnf.py  test_preload.py  test_sdc_category_management.py  test_sdc_component.py  test_sdc_element.py  (+23 more)
(+245 files in other folders)
