# SPDX-License-Identifier: Apache-2.0
[metadata]
name = onapsdk
version = attr: src.onapsdk.version.__version__
description = SDK to use ONAP Programatically
long_description = file: README.md, CHANGELOG.md, LICENSE
url = https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk
author = Orange OpenSource
license = Apache 2.0
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find_namespace:
install_requires =
  requests[socks]
  jinja2
  simplejson
setup_requires =
  pytest-runner==5.2
tests_require =
  mock
  pytest
  pytest-cov
  pytest-mock

[options.packages.find]
where=src

[options.package_data]
onapsdk = templates/*

[aliases]
test=pytest

[tool:pytest]
addopts =
  --verbose --doctest-modules --junitxml=pytest-unit.xml
  --cov-report term-missing --cov-report xml --cov-report html
  --cov=src/onapsdk --maxfail=1
testpaths = tests src
