# SPDX-License-Identifier: Apache-2.0
[metadata]
name = onapsdk
version = attr: src.onapsdk.version.__version__
description = SDK to use ONAP Programatically
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk
author = Orange OpenSource
license = Apache 2.0
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7,<4
package_dir=
    =src
packages=find_namespace:
install_requires =
  requests[socks]==2.24.0
  jinja2==2.11.2
  simplejson==3.17.2
  oyaml==1.0
  pyOpenSSL==19.1.0
  jsonschema==3.2.0
setup_requires =
  pytest-runner==5.2
tests_require =
  pytest==6.1.1
  pytest-cov==2.10.1
  requests-mock==1.8.0
  coverage==4.5.4

[options.packages.find]
where=src

[options.package_data]
onapsdk = **/templates/*

[aliases]
test=pytest

[tool:pytest]
addopts =
  --verbose --doctest-modules --junitxml=pytest-unit.xml
  --cov-report term-missing --cov-report xml --cov-report html
  --cov=src/onapsdk  --maxfail=1 --cov-fail-under=98

testpaths = tests src
